tests/sema/negative/duplicate_function.nv
fn f() : void {
    return;
}

fn f() : void {
    return;
}

fn main() : void {
    return;
}
